--- a/docroot/sites/all/themes/custom/mmorpg/css/mmorpg.styles.css
+++ b/docroot/sites/all/themes/custom/mmorpg/css/mmorpg.styles.css
@@ -545,6 +545,7 @@ ul.pager {
 /* line 71, ../sass/components/_play-now.scss */
 .pane-play-now-slider {
   overflow: hidden;
+  overflow-x: auto;
   max-height: 172px !important;
   padding: 20px;
   background: #342D44; }
@@ -557,18 +558,18 @@ ul.pager {
       margin-left: 8.47458%;
       clear: none;
       float: none; } }
-  /* line 81, ../sass/components/_play-now.scss */
+  /* line 82, ../sass/components/_play-now.scss */
   .pane-play-now-slider .view-play-now-slider {
     width: 150%;
-    overflow-x: auto; }
-  /* line 86, ../sass/components/_play-now.scss */
+    position: static; }
+  /* line 87, ../sass/components/_play-now.scss */
   .pane-play-now-slider .views-row {
     float: left;
     margin-right: 0.75em; }
-    /* line 90, ../sass/components/_play-now.scss */
+    /* line 91, ../sass/components/_play-now.scss */
     .pane-play-now-slider .views-row img {
       border-bottom: 4px solid #bce6ff; }
-      /* line 93, ../sass/components/_play-now.scss */
+      /* line 94, ../sass/components/_play-now.scss */
       .pane-play-now-slider .views-row img:hover {
         border-bottom: 4px solid #1879cd; }
 
