--- a/docroot/sites/all/themes/custom/mmorpg/sass/components/_play-now.scss
+++ b/docroot/sites/all/themes/custom/mmorpg/sass/components/_play-now.scss
@@ -74,13 +74,14 @@
 		float: none;
 	}
 	overflow: hidden;
+	overflow-x: auto;
   	max-height: 172px !important;
   	padding: 20px;
   	background: #342D44;
 
   	.view-play-now-slider{
   		width: 150%;
-  		overflow-x: auto;
+  		position: static;
   	}
 
 	.views-row{
